--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "2.6.1",
@@ -43,7 +44,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "preinstall": "npx npm-force-resolutions"
+    "preinstall": "npx npm-force-resolutions",
+    "postinstall": "npm install --legacy-peer-deps"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
