--- a/package.json
+++ b/package.json
@@ -3,26 +3,14 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
-    "@babel/preset-react": "^7.18.6",
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "2.6.1",
-    "@chakra-ui/system": "2.5.7",
     "@chakra-ui/theme-tools": "^1.3.6",
     "@emotion/cache": "^11.12.0",
     "@emotion/react": "^11.12.0",
-    "@emotion/styled": "^11.12.0",
     "@tanstack/react-table": "^8.19.3",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.2",
-    "ajv": "^8.17.1",
-    "ajv-keywords": "^5.1.0",
-    "apexcharts": "3.50.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
-    "framer-motion": "^11.3.7",
-    "npm-force-resolutions": "^0.0.10",
     "react": "19.0.0",
     "react-apexcharts": "1.4.1",
     "react-calendar": "^5.0.0",
@@ -30,12 +18,8 @@
     "react-dom": "19.0.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
-    "react-is": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "^5.0.0",
-    "stylis": "^4.3.2",
-    "stylis-plugin-rtl": "^2.0.2",
-    "web-vitals": "^4.2.2"
+    "stylis-plugin-rtl": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -67,11 +51,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "anymatch": "^3.1.3",
-    "chokidar": "^3.6.0",
-    "gh-pages": "^6.1.1",
-    "micromatch": "^4.0.7"
   }
 }
