--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "preinstall": "npx npm-force-resolutions",
-    "postinstall": "npm install --legacy-peer-deps"
+    "postinstall": "echo 'Postinstall işlemi tamamlandi!'"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
